--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ body {
 header {
   width: 100%;
   height: 500px;
-  background: var(--white);
+  background: #7B2525;
 }
 
 .content {
@@ -49,8 +49,8 @@ nav {
 }
 
 .brand {
+  width: 30%;
   font-size: 24px;
-  color: var(--red);
   cursor: pointer;
 }
 
@@ -66,29 +66,29 @@ nav ul li {
 }
 
 nav ul li a {
-  color: var(--red);
+  color: var(--white);
   text-decoration: none;
 }
 
 nav ul li a:hover {
-  color: #FF000083;
+  color: #b3b3b3;
 }
 
 nav ul button {
-  border: 1px solid var(--red);
+  border: 1px solid var(--white);
   background: transparent;
   padding: 8px 40px;
   cursor: pointer;
   margin-left: 30px;
-  color: var(--red);
+  color: var(--white);
   font-weight: bold;
   border-radius: 4px;
 }
 
 nav ul button:hover {
   transition: background, color 0.6s;
-  background: var(--red);
-  color: white;
+  background: var(--white);
+  color: #7B2525;
 }
 
 .content .header-block {
@@ -176,6 +176,7 @@ section .filter-card {
 .search-button:hover {
   background: #dedede;
   color: var(--red);
+  border-radius: 8px;
 }
 
 .title-wrapper-catalog {
@@ -240,6 +241,7 @@ section .card-item {
 }
 
 .card-item button:hover {
+  border: 2px solid var(--red);
   background: #dedede;
   color: var(--red);
 }
@@ -361,7 +363,7 @@ footer {
 footer .main {
   width: 100%;
   height: 200px;
-  background-color:#FF0000;
+  background-color:#7B2525;
   padding: 20px 10px;
 }
 
