--- a/css/cadastrar.css
+++ b/css/cadastrar.css
@@ -32,12 +32,12 @@ div.container form{
 
 div.container form input{
     font-size: 18px;
-    padding: 12px;
+    padding: 9px;
     color: rgb(0,0,0);
     max-width: 185px;
     margin: 0 7px;
     border-radius: 5px;
-    border: 2px solid rgb(255,0,0);
+    border: 2px solid rgb(51, 51, 51);
     outline: 0;
     transition: border 0.4s;
 }
@@ -45,7 +45,7 @@ div.container form input{
 div.container form input:hover,
 div.container form input:focus,
 div.container form input:valid{
-    border: 2px solid  mediumseagreen;
+    border: 2px solid  rgb(255, 0, 0);
 }
 
 div.container form 
