--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ nav ul li {
 }
 
 nav ul li a {
+  padding: 5px;
   color: var(--white);
   text-decoration: none;
 }
@@ -75,14 +76,14 @@ nav ul li a:hover {
 }
 
 nav ul button {
-  border: 1px solid var(--white);
+  border: 2px solid var(--white);
   background: transparent;
-  padding: 8px 40px;
+  padding: 10px 39px;
   cursor: pointer;
   margin-left: 30px;
   color: var(--white);
   font-weight: bold;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 nav ul button:hover {
