--- a/css/trabalheconosco.css
+++ b/css/trabalheconosco.css
@@ -24,7 +24,7 @@ fieldset {
 }
 
 body{
-    background-color: #B0E0E6;
+    background-color: #7B2525;
     font-family: sans-serif;
     font-size: 1em;
     color: #1C1C1C;
