--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -11,6 +11,46 @@ body {
     min-height:100vh;
 }
 
+nav ul {
+    height: 40vh;
+    width: 1600px;
+    display: flex;
+    flex-direction: row;
+}
+  
+nav ul li {
+    list-style: none;
+    padding: 10px;
+    cursor: pointer;
+}
+  
+nav ul li a {
+    padding: 5px;
+    color: white;
+    text-decoration: none;
+}
+  
+nav ul li a:hover {
+    color: #b3b3b3;
+}
+  
+nav ul button {
+    border: 2px solid white;
+    background: transparent;
+    padding: 10px 39px;
+    cursor: pointer;
+    margin-left: 30px;
+    color: white;
+    font-weight: bold;
+    border-radius: 8px;
+}
+  
+nav ul button:hover {
+    transition: background, color 0.6s;
+    background: white;
+    color: #7B2525;
+}
+
 .models {
     display:none;
 }
