--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ nav ul li {
 }
 
 nav ul li a {
-  padding: 5px;
+  padding: 10px;
   color: var(--white);
   text-decoration: none;
 }
@@ -145,7 +145,7 @@ section .catalog {
 section .filter-card {
   width: 980px;
   height: 150px;
-  background: #808080;
+  background: #7B2525;
   border-radius: 8px;
   margin: 0 auto;
   display: flex;
@@ -165,18 +165,19 @@ section .filter-card {
 .search-button {
   width: 150px;
   height: 50px;
-  border-radius: 0px 4px 4px 0px;
-  border: none;
-  background: var(--red);
+  border-radius: 8px;
+  border: 2px solid rgb(0, 0, 0);
+  background: rgb(0, 0, 0);
   color: white;
+  padding: 10px 39px;
   cursor: pointer;
   font-size: 1.1em;
   transition: 0.2s ease;
 }
 
 .search-button:hover {
-  background: #dedede;
-  color: var(--red);
+  background: rgb(110, 110, 110);
+  color: var(--white);
   border-radius: 8px;
 }
 
@@ -188,10 +189,12 @@ section .filter-card {
 section .card-wrapper {
   max-width: 1000px;
   height: 100%;
+  border-radius: 8px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
   grid-gap: 30px;
   padding-top: 50px;
+
 }
 
 section .card-item {
